# rclite

./: .actrc  .gitignore  README.md  flake.nix  mise.toml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docs.yml  python-package.yml
benchmarks/: README.md  _perf_kernels.py  _perf_schema.py  affine_accuracy.py  affine_speed.py  compare_host_4way.py  compare_host_float.py  compare_host_full.py  compare_wasm.py
examples/: README.md  build_arduino_uno.py  build_c_library.py  build_microbit.py  build_microbit_i16_affine.py  build_microbit_i8.py  build_microbit_quantized.py  classification_deploy.py  classification_esn.py  ir_pass_bench.py  jit_benchmark.py  mackey_glass_esn.py  mackey_glass_sweep.py  online_esn.py  structured_esn.py  yildiz_esp_demo.py
rclite/: __init__.py
tests/: arduino_online_test.py  avr_object_test.py  c_library_test.py  classification_codegen_test.py  classification_test.py  codegen_test.py  gba_object_test.py  ir_test.py  mimo_test.py  mlir_affine_spike_test.py  mlir_affine_xdsl_test.py  mlir_jit_test.py  mlir_quant_types_test.py  mlir_quant_types_xdsl_test.py  mlir_symmetric_spike_test.py  mlir_target_test.py  mlir_xdsl_test.py  online_lms_c_test.py  per_channel_test.py  per_channel_wout_test.py  phase_d_test.py  quant_affine_arduino_test.py  quant_affine_codegen_test.py  quant_affine_lut_test.py  quant_affine_test.py  quant_classification_test.py  quant_codegen_test.py  quant_export_test.py  quant_i8_test.py  quant_pooling_test.py  quant_test.py  rc_dialect_test.py  smoke_test.py  sparse_c_test.py  sparse_mcu_test.py  sparse_quant_test.py  sparse_test.py  sparse_valuespec_test.py  streaming_ridge_test.py  targets_test.py  (+1 more)
(+213 files in other folders)
