[project]
name = "rclite"
version = "0.1.0"
description = "Reservoir Computing deployment framework for embedded systems, in the spirit of TensorFlow Lite for Microcontrollers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "llvmlite>=0.42",
    "jinja2>=3.1",
]

[project.optional-dependencies]
docs = ["pdoc>=14"]
# Opt-in: the MLIR reference path builds its IR with xDSL (pure-Python).
# Production codegen stays on llvmlite with zero extra deps.
mlir = ["xdsl>=0.66"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rclite"]

[tool.ruff]
# Match the project's hand-formatted ~79-col style.
line-length = 79

[tool.ruff.lint]
# Pre-commit enforces a small, high-signal set (see `mise run pre-commit`):
# F401 unused imports, F811 redefinitions. `ruff check` here also surfaces the
# default pyflakes/pycodestyle rules when run manually.
extend-select = ["F401", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]
